# lapack

./: .gitmodules  .travis.yml  Cargo.toml  LICENSE.md  LICENSE.txt  Makefile  Makefile.cargo  README.md  generate.py
.github/workflows/: build.yml
benches/: lib.rs
liblapack-sys/: Cargo.toml  build.rs  lib.rs
liblapack-sys/src/: blas.rs  lapack.rs  lib.rs
src/: Makefile  blas.rs  c.rs  common.rs  fortran.rs  lapack-sys.rs  lapack.rs  lib.rs  metal.rs
test/: Makefile  lib.rs
tests/: lib.rs  metal.rs
