[package]
name = "lapack"
version = "0.19.0"
license = "Apache-2.0/MIT"
authors = [
    "Andrew Straw <strawman@astraw.com>",
    "Crozet Sébastien <developer@crozet.re>",
    "David Greenberg <dsg123456789@gmail.com>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Pavel Potocek <pavelpotocek@gmail.com>",
    "Selvavignesh Vedamanickam <selvavm@hotmail.com>",
    "Toshiki Teramura <toshiki.teramura@gmail.com>",
]
description = "The package provides wrappers for LAPACK (Fortran)."
documentation = "https://docs.rs/lapack"
homepage = "https://github.com/blas-lapack-rs/lapack"
repository = "https://github.com/blas-lapack-rs/lapack"
readme = "README.md"
categories = ["api-bindings", "science"]
keywords = ["linear-algebra"]

[dependencies]
libc = "0.2"

[dependencies.num-complex]
version = "0.4"
default-features = false

[dependencies.lapack-sys]
version = "0.13"
default-features = false
